# Virtual-Bookshelf

./: CMakeLists.txt  main.cpp
Headers/: Book.h  Bookshelf.h  Controller.h  FileRepo.h  GUI.h  GenericRepo.h  Library.h  ModelView.h  Observer.h  Tests.h  Undo.h  Validation.h
Sources/: Book.cpp  Bookshelf.cpp  Controller.cpp  FileRepo.cpp  GUI.cpp  Library.cpp  Tests.cpp  Undo.cpp  Validation.cpp
